--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bootstrap": "^5.3.3",
     "dotenv-safe": "^9.1.0",
     "js-cookie": "^3.0.5",
-    "next": "15.1.0",
+    "next": "^16.0.10",
     "next-sitemap": "^4.2.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
